manifests/home-assistant/overlay/ext/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: home-assistant-public
  namespace: home-automation
  labels:
    app: home-assistant
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-protocol: "true"
spec:
  ingressClassName: nginx-public
  rules:
    - host: home-assistant.theautomation.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 80
  tls:
    - hosts:
        - home-assistant.theautomation.nl
      secretName: tls-wildcard-theautomation-nl
